--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+<!--Meta tags OG -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Teste Burguer - O melhor hamburguer " />
+    <meta property="og:image" content="https://cardapio-online-ten.vercel.app/assets/hamb-1.png " />
+    <meta property="og:description" content="A melhor hamburgueria " />
+    <meta property="og:site_name" content="TesteBurguer " />
+
+
     <link rel="stylesheet" href="./styles/output.css">
     <title>TesteBurguer - A melhor hamburgueria</title>
 </head>
